--- a/style.css
+++ b/style.css
@@ -224,11 +224,12 @@ body{
     text-align: center;
     background: #FFEEA0;
     width: 300px;
-    height: 300px;
+    height: 250px;
     margin: auto;
 }
 
 .word{
+    padding-top: 10px;
     font-size: 20px;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
