--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body,html{
+body,html{ 
     height: 100%;
     margin: 0;
 }
@@ -109,6 +109,47 @@ body{
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #ff8000;
+}
+
+.start-modal{
+    line-height: 50px;
+    padding: 20px;
+}
+
+.start-modal > label{
+    font-size: 30px;
+}
+
+.start-modal > #difficulty{
+    width: 150px;
+    font-size: 20px;
+    border-radius: 10px;
+    padding: 5px;
+    color: #445D80;
+    border: 2px solid #445D80;
+}
+
+.start-modal > #difficulty:hover{
+    color: #ffffff;
+    background-color: #445D80;
+    border: 2px solid #ffffff;
+}
+
+.start-modal > .play-button{
+    cursor: pointer;
+    background-color: #ffffff;
+    color: #2c974b;
+    padding: 5px;
+    width: 150px;
+    border-radius: 10px;
+    border: 2px solid #2c974b;
+    font-size: 20px;
+}
+
+.start-modal > .play-button:hover{
+    color: #ffffff;
+    background-color: #2c974b;
+    border: 2px solid #ffffff
 }
 
 #award{
