--- a/style.css
+++ b/style.css
@@ -83,6 +83,27 @@ body{
     border: 2px solid #0e2214;
 }
 
+.start-area > .how-to-button{
+    cursor: pointer;
+    background-color: #77dd94;
+    color: #ffffff;
+    padding: 8px;
+    width: 150px;
+    border-radius: 10px;
+    border: 2px solid #ffffff;
+    font-size: 18px;
+}
+
+#question-icon{
+    font-size: 20px;
+}
+
+.start-area > .how-to-button:hover{
+    color: #77dd94;
+    background-color: #ffffff;
+    border: 2px solid#77dd94;
+}
+
 .modal{
     display: none;
     position: fixed;
@@ -163,6 +184,33 @@ body{
     font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif; 
     color: #445D80;   
+}
+
+#score-difficulty > button, #how-to-difficulty > button{
+    background-color: #ffffff;
+    color: #445D80;
+    font-size: 15px;
+    border: none;
+    outline: none;
+}
+
+#score-difficulty > #easy-score, #how-to-difficulty > #easy-how-to{
+    border-bottom: 2px solid #ff8000;
+}
+
+#how-to-paragraph{
+    font-size: 15px;
+    line-height: 14px;
+    color: #445D80;
+}
+
+.how-to-list{
+    list-style-type: none;
+    color: #445D80;
+    font-size: 15px;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
+    margin-right: 45px;
 }
 
 .close {
@@ -267,6 +315,11 @@ body{
     width: 300px;
     height: 250px;
     margin: auto;
+    /* line-height: 20px; */
+}
+
+.play-area > span{
+    font-size: 20px;
 }
 
 .word{
