--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ body{
     display: none;
 }
 
-#gameOver{
+/* #gameOver{
     display: none;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
+} */
 
 .main{
     width: 100%;
@@ -40,6 +40,12 @@ body{
     text-align: center;
     padding: 100px 0;
 }
+
+/* @media only screen and (max-width: 768px){
+   #user-input:focus + .play-area{
+       background-color: #888;
+   }
+} */
 
 .start-area > .start-button{
     cursor: pointer;
@@ -307,6 +313,11 @@ body{
     border-radius: 50%;
     background-color: #2c974b;
     line-height: 10px;
+}
+
+.play-screen{
+    width: 100%;
+    margin: auto;
 }
 
 .play-area{
