--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body,html{
 
 body{
     height: 100%;
-    background-image: url('./public/home.jpg');
+    background-image: url('/RapidTyperGame/public/home.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
