--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ body{
     display: none;
 }
 
-#bgVideo{
+/* #bgVideo{
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
+} */
 
 /* #gameOver{
     display: none;
